# MemoryLeakCheck

./: .gitignore  CMakeLists.txt  MemoryLeakCheck.h  README.md  main.cpp
include/: mlc.h
test/: main.cpp
